--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,19 @@
         </activity>
         <activity
             android:name=".CrimePagerActivity"
-            android:parentActivityName=".CrimeListActivity">
-        </activity>
+            android:parentActivityName=".CrimeListActivity"></activity>
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.piterskikh.criminalintent.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/files" />
+        </provider>
+
 
     </application>
 
